fix: story title overflowing sidebar
Long story titles without breaks were overflowing sidebar

Fixed using:

1. Clamp to 1 line and add ellipsis to indicate it's truncated.
2. Added title attr hover as a stopgap to a more robust hover.
3. Moves language and media indicators to StoryMeta to allow header to
   use a full line to optimize display.

--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,13 @@ p {
   overflow: hidden;
 }
 
+.clampTitle {
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
 /****
  * Badges
  *
